--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.14.0</version>
+            <version>3.141.59</version>
         </dependency>
 
         <dependency>
@@ -119,6 +119,11 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.viber</groupId>
+            <artifactId>viber-bot</artifactId>
+            <version>1.0.11</version>
+        </dependency>
 
     </dependencies>
 
