--- a/src/main/resources/supplier.properties
+++ b/src/main/resources/supplier.properties
@@ -780,3 +780,15 @@
 9462748=рнб"юйбю-пндня "
 8146299=оо "ц╡дпнятепю"
 10171395=рнб "аела╡йя"
+9262711=рнб "юБРНЙПЁЯКЮ"
+8684226=рнб "яРЮРСЯ-еКЕЙРПН"
+9720576=рнб "ц╡д╡я"
+9147159=рнб йЁДЯКЮИМ дХЯРПХАЭЧЬМ
+8630714=оо "реокнц╡дпнрпеид"
+1706923=рнб "дНЛЁМЁЙ 777"
+8851819=рнб "╙бпнюпр йнлоюм╡"
+10256101=рнб "д╡яр я╡ярел"
+8211783=рнб ╚дб╙╩
+10255161=рнб "ярпелъмйю чю"
+8394295=рнб "╡мреп юипнм"
+21719=рнб кюитяекк
