--- a/src/main/resources/supplier.properties
+++ b/src/main/resources/supplier.properties
@@ -793,3 +793,75 @@
 8394295=ТОВ "ІНТЕР АЙРОН"
 21719=ТОВ ЛАЙФСЕЛЛ
 10262957=ТОВ "ІМПОРТ КАПІТАЛ"
+6651=ПрАТ "ВФ УКРАЇНА"
+102254=Коротченко С.М. ФОП
+486109=АТ "НОВИЙ СТИЛЬ"
+546163=ТОВ "МІЛЄ"
+905188=ТОВ "ПРИМТЕКС ПЛЮС"
+1335016=ТОВ "АКВАЦЕНТР-УКРАЇНА"
+1400434=ЛОГИН ИП
+1403165=ТОВ "АРТ - ПРОМ"
+3332036=ТОВ "ТОРГОВА КОМПАНІЯ "ПОЗИТИВ"
+4211515=ТОВ "ДОМ ТРЕЙД ПС"
+4320460=ФОП Гуманцов Вячеслав Володимирович
+4574384=ТОВ "Укравтозапчастина"
+5493604=ТОВ "НІКО ТРЕЙДІНГ"
+6168020=ТОВ "НВО "ЕКОСОФТ"
+6484582=ТОВ «НЕТВОРКІНГ»
+6617481="ПРАЙМЕРІ ЛТД" ТОВ
+6980409=ТОВ "КОСМОС ЛАЙТІНГ УКРАЇНА"
+7079502=ТОВ «СМАРТ ТРЕЙД УКРАЇНА»
+7356624=ТОВ "УКРКОМПОЗИТ+"
+7474443=Розгон Сергей Владимирович ФОП
+7598585=ТОВ "ГУДВИН ТРЕЙД"
+7681539=ФЛП Овчарова Светлана Георгиевна
+7903799=ТОВ "КСТАР ПАУЕР Україна"
+7943690=ТОВ «Драгон Енерджі»
+7985410=ТОВ "БЕРГАМО УКРАЇНА"
+8070088=ТОВ "СЕКТОРПЛЮС"
+8122143=ТОВ "СК ДИСТРИБЬЮШИН"
+8215255=ФОП Ющенко Ростислав Павлович
+8242487=ФОП Хоменко Діана Ауреліувна
+8283570=ТОВ "ЮДВ ТРЕЙД"
+8328735=ТзОВ "УТК ВЕРТИКАЛЬ"
+8339028=ТОВ "КОМТЕК-Д"
+8339318=ТОВ "КОМПАНІЯ ВІРДЖІНІЯ"
+8432828=ФОП МУРИНЧЕНКО ЛІДІЯ ТРОХИМІВНА
+8481177=ФОП Гуревич Дмитрий Игоревич
+8490310=ФОП Апухтіна Світлана Миколаївна
+8591863=ТОВ "ТГ"ТНП"
+8626894=ТОВ "ЄВРОТРЕЙДІНГ"
+8630699=ПП "САНДІ ПЛЮС"
+8730652=ТОВ "ВЕЙВО ЮКРЕЙН МОБАЙЛ КОМУНІКЕЙШЕН"
+8754619=ТОВ"ОСТРАТЕКС"
+8756588=ТОВ "ЛАКШЕРІ ТЕКСТИЛЬ"
+8759865=ТОВ "Т-М-С"
+8791163=ТОВ "АКБ"
+8804926=ТОВ "АУТФІТТЕРС"
+8822250=ТОВ "ТОПМАКС"
+8856006=ТОВ «ХОТЕЙ ЕНЕРДЖИ»
+8869204=ТОВ "КАПРУН"
+8871440=ФОП Чечель Олена Петрівна
+8897583=ФОП Чухонцев Володимир Володимирович
+9051520=ТОВ «Вермарк»
+9073714=ООО "Лентер"
+9099388=ФOП Терешкевич Андрій Богданович
+9153660=ТОВ "МК МУССОН"
+9229172=ФОП Нікітіна Катерина Володимирівна
+9277737=ТОВ "МАККОН"
+9277908=ТОВ « БЕБIЗЗ УКРАЇНА»
+9291459=ТОВ "ЕЙР КЛІМАТ"/Приватна
+9291862=ТОВ "Швейкін і Ко"
+9317063=ФОП Блюма  Андрій Юрійович
+9319887=ТОВ ТЕХКОМПЛЕКТ УКРАЇНА
+9324298=ТОВ "ЛКС-В"
+9376661=ПП Пауерлюкс
+9395743=ТОВ "Торгівельний дім ТЕХНОВДС"
+9567897=ФОП Кудлай К А
+9821634=ТОВ "СТЦ "УКРАВТОЗАПЧАСТИНА""
+9872922=ТОВ "СЕКТОР ТРЕЙД"
+9981479=ФОП Дмитришен Павло Валерійович
+9981483=ФОП Саід Адель
+9981498=ТОВ "РЕНД СЕРВІС"
+10053894=ТОВ "ВІН СТРІМ"
+7322285	Джулай Катерина Вікторівна ФОП
