--- a/src/main/resources/supplier.properties
+++ b/src/main/resources/supplier.properties
@@ -865,3 +865,101 @@
 9981498=ТОВ "РЕНД СЕРВІС"
 10053894=ТОВ "ВІН СТРІМ"
 7322285	Джулай Катерина Вікторівна ФОП
+8636338=ФОП Ковба Мария Николаевна
+10272062=ФОП Ситдиков Геннадій Ахметович
+9855120=ТОВ "ЄВРОВЕЛЛ"
+531113=ТОВ"ТЕПЛОСИЛА"
+10165687=ТОВ "ТРЕЙД СІКРЕТ"
+9666700=ТОВ "ТД "АМТ"
+9762900=ФОП Рябцев Олексій В'ячеславович
+5516894=ПП "ОПТІК ТРЕЙД УКРАЇНА"
+6382805=ФОП "Латипов Роман Владимирович"
+10334053=ТОВ "ГЕЙЗЕР ЛОГІСТИК"
+9480732=ТОВ "АЙТЕРМО"
+10251802=ФОП Шишкін Ігор Олександрович
+9687070=ТОВ "ПК "ДТЗ"
+9255133=ФОП Голуб (Polimat)
+7945201=ТОВ "ТД ІСК"
+10361048=ТОВ "ОВІ-ДИСТРИБУШН"
+10237771=ТОВ "АТЛАНТ ДИСТРИБЬЮШН"
+10367495=ФОП Шорін Богдан Володимирович
+9775209=ТОВ "АЛ-КО КОБЕР"
+3254173=ТОВ "ДУКОР"
+1048874=ТОВ "Форвард СВ"
+10384265=ТОВ"МІР ХОББІ УКРАЇНА"
+10406046=ТОВ "КІЧЕНЛАЙН"
+9846687=ТзОВ "Волтрейдін"
+76400=ФОП Сергиенко
+8338300=ТОВ "ФЕЯ СЕРВІС"
+10418588=ТОВ "АРЛАЙН СІСТЕМ"
+9977985=ФОП КОНЯХІН ЮРІЙ
+10411353=ТОВ "СКАЙ ДІСТРІБЬЮШЕН КОМПАНІ"
+10423718=ФОП Скачков Олексій Юрійович
+10440909=ТОВ "КМК ТРЕЙД"
+10305117=ТОВ "АСАВА ГРУПП"
+10443129=ТОВ "ЕМСА ПЛЮС"
+10493122=ФОП Мельник Сергій Михайлович
+231794=ТОВ  "ФЛЕШКОМ"
+10510184=ПП "ВИРОБНИЧЕ ОБ'ЄДНАННЯ ЕЛНА-СЕРВІС"
+10136946=ТОВ "КОННЕКТ ТРЕЙД"
+9793928=ПП "СПОРТЕК.УА"
+10510193=ТОВ "ЕВО МОТОРС"
+10530498=ТОВ "К-ГРУП"
+10559841=ТОВ "ХАЙЕР-ЕІРКОН"
+8869188=ТОВ"ЕЛЕКТРОНІК ТРЕЙД"
+7539931=ТОВ "Ніка-Трейд"
+10530525=ФОП Шматуха Віталій Григорович
+10590414=ТОВ "РЕЛОАДВОРЛД"
+10415228=ТОВ "ЮТЕХ"
+10566485=ФОП Авезов Артем В'ячеславович
+6788823=ТОВ "КОМПАНІЯ "ВІССОН ТРЕЙД"
+10531338=ТОВ "ТД "ЖИВА ВОДА"
+10602532=ФОП Якубов Владлен Олександрович
+9197435=ТОВ "ЕЙР Бейбі"
+10596844=ФОП Коваль Артем Юрійович
+10483459=ТОВ "АЛЬФА МАРКЕТ ТРЕЙДІНГ"
+1945127=ТОВ "КОМПАНІЯ "ЛІБЕРТІ УКРАЇНА"
+10753268=ПП "ГЕРМЕС ОПТ ТРЕЙДЕР"
+5022394=ТОВ "ХАММЕР МАРКЕТ"
+10797839=ТОВ "КВЕЗАЛЬ ПЛЮС"
+10805386=ФОП Хом'як Ігор Ярославович
+8759324=ТОВ  «БЕКО УКРАЇНА»
+10872791=ПП "ВОЛИНЬТЕХПОБУТСЕРВІС"
+10519504=ТОВ "ЕКСЕЛЛЄНТ КОМПАНІ"
+2285174=ТОВ "Асканія Авто"
+10851535=ФОП Норік Денис Станіславович
+6543173=ТОВ "ТАЄРС ЛІЗИНГ"
+10929494=ФОП Харлашко Юлія Павлівна
+8244771=ФОП  Качура М.П.
+89135=ТОВ "ЕПІЦЕНТР К"
+10887684=ФОП Парій Олександр Миколайович
+9999901=ФОП Чугай Анатолій Вікторович
+10225968=Комплект предпродажного товара
+10928525=ФОП Тарабокіо Олександр Григорович
+52445=АТ «УНІВЕРСАЛ БАНК»
+1577849=ТОВ "ІР СОМ"
+4428043=ФОП Колесніков Д.В.
+2400946=ТОВ "ПОРТАТИВ"
+9633055=ФОП Зелюнко Андрій Леонідович
+10272121=ФОП Бадьор Галина Володимирівна
+9728428=ФОП Лупульчук  Юрій Андрійович
+9123599=ФОП  Горбач Юлія Олексіївна
+8490054=ФЛП Хомутов Константин Александрович
+7503213=ФОП Жижко Сергій Олексійович
+8534333=ФОП Полищук Ю.А.
+8790885=ФОП Попович О.В.
+7213734=ФОП Стефанский Р.С.
+5682109=ТОВ "Телестудія"
+6079831=ФОП Жежера Е.В.
+9746983=ФОП Прокопець Юрій Олександрович
+10509180=ТОВ "ОНЛАЙН ІНВЕСТ"
+10768123=ТОВ "ЕЙКОША УКРАЇНА"
+11148004=ФОП Носулько Вікторія Володимирівна
+11155105=Самсунг демо-образцы
+9901051=ТОДО +
+11011875=ФОП Мельничук Олександр Петрович
+9846644=ФОП Роменский Александр Леонидович
+11040652=ТОВ "ТОРГОВИЙ ДІМ "ФІЧ ТРЕЙД ХАУС"
+10851609=ТОВ "ІК ФЕЙМОС"
+11254596=ТОВ "СВІТ САНТЕХНІКИ"
+10272132=ФОП Безуглий Василь Ларионович
