--- a/src/main/resources/stop_list.properties
+++ b/src/main/resources/stop_list.properties
@@ -2,16 +2,18 @@
 7820125=ТОВ "ТЕХНОЛОДЖІКАЛ ТРЕЙД"
 5657396=ООО "ГЮНТЕР ПЛЮС
 4949115=ТОВ  «АЛЬФАІНЖИНІРИНГ»
-
+4148842=Шаренко И.И. (ТД Спорт)
 79401=АТ «Альцест»
-
+7474443=Розгон Сергей Владимирович ФОП
+497940=Удич
+#1631949=ФОП Горбатенко Сергій Михайлович
+798463=ТОВ "САЮЗ"
 546163=ТОВ "МІЛЄ"
 1335016=ТОВ "АКВАЦЕНТР-УКРАЇНА"
 1488673=ТОВ «Д І К О М»
 1806922=ФОП Поліщук Олексій Євгенійович
 2566866=ТОВ "ОРКС"
 3280783=ООО "Экстрадиджитал"
-3805314=ООО «ПРОМДЕКС-УКРАИНА»
 4140870=ТОВ Автодіти
 4574384=ТОВ "Укравтозапчастина"
 4828384=ТОВ "Київська шинна компанія"
@@ -26,6 +28,9 @@
 8122143=ТОВ "СК ДИСТРИБЬЮШИН"
 8283570=ТОВ "ЮДВ ТРЕЙД"
 8328735=ТзОВ "УТК ВЕРТИКАЛЬ"
-8730652=ТОВ "ВЕЙВО ЮКРЕЙН МОБАЙЛ КОМУНІКЕЙШЕН"
 8869204=ТОВ "КАПРУН"
-9051520=ТОВ «Вермарк»
+5814311=ТОВ “АМТ Трейд”
+#2955929=МНВІКП "СУЗІР'Я СТРІЛЬЦЯ" ТОВ
+3185872=ТОВ "Айсберг-Україна"
+4196079=Вурос
+7322570=ФОП Антонів Йосип Володимирович
