--- a/src/main/resources/supplier.properties
+++ b/src/main/resources/supplier.properties
@@ -645,7 +645,6 @@
 5656707=рнб "яйюит╡р"
 5657396=ннн "цчмреп окчя"
 5677043=во дНОПХМДЮ юКЕЙЯЮМДП бХЙРНПНБХВ
-5706968= рнб "екечя"
 5750056=рнб "ьхммхи йнла╡мюр"
 5814311=рнб ⌠юлр рПЕИД■
 5816655=рнб "рд екейрпнапхрбю уюпй╡б"
@@ -963,3 +962,18 @@
 10851609=рнб "╡й теилня"
 11254596=рнб "яб╡р яюмреум╡йх"
 10272132=тно аЕГСЦКХИ бЮЯХКЭ кЮПХНМНБХВ
+11204971=рнб "юк╡яю-кюим"
+11308240=рнб "юит╡к сйпю╞мю"
+11295514=рнб "йяк 16"
+5706968=рнб "екечя"
+11255701=рнб "бнпкд кюлоя"
+10929631=рнб "юпдейя"
+8364368=рнб "ъйнаг дюс ецаепря сйпю╞мю"
+6515874=рнб "лдю рПЕИД"
+4717371=рнб ╚д╡дф╡рюк емд юмюкнц я╡яреля/DIGITAL
+11379879=рнб "а'ЧРЁ кЮИТ сЙПЮ©МЮ"
+11477460=рнб "юИАЁ цПСО"
+11499331=рнб "б╡пюярюп ╡мдюярп╡г"
+11000985=рнб "йюо╡рекэ дм╡опн"
+11563433=рнб "яр-рпеид яепб╡я"
+197807=рнб "йюпюосг"
