--- a/src/main/resources/ukrcastom.properties
+++ b/src/main/resources/ukrcastom.properties
@@ -1,47 +1,25 @@
 117837= ╚мЮБЁНМЁЙЮ╩ рнб
-449731=рнб "дхярпхасж╡им╡ лепеф╡"
 584266=рнб "юбрн-яхкю"
 592396=рнб "днлюмн"
-905188=рнб "опхлрейя окчя"
-1008402=рнб ╚рнпцнбю йнлоюм╡ъ ╚нор╡л╩
 1111342=рнб "йюл╡нм-н╡к"
 1140525=рнб "бюиемдд╡"
-1191727=рнб  "яюрспм -рб"
 1287050=тно цКЮБЮЖЭЙХИ цЕММЮДЁИ рЮДЕСЬЕБХВ
 1401146=рнб "екейрпсл крд"
-1706923=рнб "дНЛЁМЁЙ 777"
 1938159=яо оПюр "юРКЮМР-сЙПЮ©МЮ"
 1945300=рнб "кейнопн"
 2285174=рнб "юЯЙЮМЁЪ юБРН"
-2392756=рнб "ейярп╡л опюид"
-2800108=рнб лЁЙНМ рПЕИД
 2955929=лмб╡йо "ясг╡п'ъ ярп╡кэжъ" рнб
-3022822=рнб "реумнонкхя 15"
-3236079=рнб ╚╙бпнйеия╩
 3397169=рнб ╚юйюлю╩
-3735528=рнб ╚ткюи реумнкндфх╩
-3819344=рнб ╚йЮПЛЮ дЁДФЁРЮК крд╩
 4048916= "норю ейяхлю"
 4197854=ннн "сЙПЙЕИЯ"
 4320460=тно цСЛЮМЖНБ бЪВЕЯКЮБ бНКНДХЛХПНБХВ
 4353496=рнб "ббцпсо"
 4356681=рнб "аЁЦРПЕИД"
-4369728=рнб ╚йо ел╡п╩
-4726310=оПХБЮРМЕ ОЁДОПХ╨ЛЯРБН "йЮБЮ рПЕБЕК"
-4750454=тно мЮГЮПЕМЙН б.я.
-4828156=рнб ╚аеа╡ опндфейр╩
 4849450=ннн "яХЦЛЮ сЙПЮХМЮ"
 4873466=рнб "йхебйкхлюр"
-4964003=рнб "к.ю.л."
-4980832=рнб "рнорск"
-5022394=рнб "уюллеп люпйер"
 5033624=яХПЕМЙН л.я тко
-5167553=рнб ╚емепфх рпеид╩
 5227002=рнб ⌠яРПЕЛЪМЙЮ■
-5298425=тно уНЛ'ЪЙ аНЦДЮМ бНКНДХЛХПНБХВ
-5353237=рнб "юпркюим ╡мрецпюж╡ъ"
 5398559=рнб "рЕУМННОРРНПЦ-рПЕИД"
-5469507=оо "аНИК╨ПНМ"
 6373074=рнб "деоянк сйпю╞мю"
 6376450=рнб "вхярхи яб╡р-рпеид"
 6788823=рнб "йнлоюм╡ъ "б╡яянм рпеид"
@@ -49,37 +27,18 @@
 7432517=тно цЕПЮЯХЛВСЙ нКЕЙЯЮМДП бЮЯХКЭНБХВ
 7526199=рнб "сйпрнпцьхмю"
 7566819=рнб "тнплемрепю"
-7598585=рнб "цсдбхм рпеид"
-7644656=рнб "сйп╙бпнярпни"
-7909890=рнб "дп╡л леийепя"
-7938757=рнб "мНБЮ тНПЛСКЮ"
 7945201=рнб "рд ╡яй"
 8070088=рнб "яейрнпокчя"
-8180743=рнб "йх╞бьхмрнпц"
 8338300=рнб "теъ яепб╡я"
-8339028=рнб "йнлрей-д"
 8626894=рнб "╙бпнрпеид╡мц"
 8703378=рнб "рскя.сю"
-8730626=рнб "реумн-лхп дм╡опноерпнбяэй"
 8730649=рнб ╚аеярбнпй╩
-8754619=рнб"нярпюрейя"
 8759865=рнб "р-л-я"
-8791163=рнб "юйа"
 8804926=рнб "юсрт╡ррепя"
 8822250=рнб "рнолюйя"
 8856006=рнб ╚унреи емепдфх╩
-9051520=рнб ╚бЕПЛЮПЙ╩
-9147159=рнб йЁДЯКЮИМ дХЯРПХАЭЧЬМ
-9153660=рнб "лй лсяянм"
-9166664=рнб  "я╡цлю лнаюик"
-9197435=рнб "еип аЕИАЁ"
 9255133=тно цНКСА ч. о.
-9262711=рнб "юБРНЙПЁЯКЮ"
-9277908=рнб ╚ аеаIгг сйпю╞мю╩
 9291459=рнб "еип йк╡люр"/оПХБЮРМЮ
-9320332=рнб ╚лемрюк╩
-9324298=рнб "кйя-б"
-9462748=рнб"юйбю-пндня "
 9480732=рнб "юиреплн"
 9523862=рнб "яр-йк╡люр"
 9567897=тно йСДКЮИ й ю
@@ -87,12 +46,8 @@
 9720576=рнб "ц╡д╡я"
 9762900=тно пЪАЖЕБ нКЕЙЯЁИ б'ЪВЕЯКЮБНБХВ
 9788683=рнб "бемраюгюп окчя"
-9793903=рнб "к-рпеид цпсо"
 9793928=оо "яонпрей.сю"
 9821634=рнб "ярж "сйпюбрнгюовюярхмю""
-9846687=рГнб "бНКРПЕИДЁМ"
-9872922=рнб "яейрнп рпеид"
-9904800=рнб "юпеюмю"
 9981498=рнб "пемд яепб╡я"
 9982122=тно цСП'╨БЮ рЕРЪМЮ ╡БЮМЁБМЮ
 10024419=рнб "мнбхи теьм п╡реик"
@@ -105,62 +60,23 @@
 10077776=рнб "опнйеип"
 10088632=тно цНМВЮПСЙ нКЕЦ бНКНДХЛХПНБХВ
 10108578=тно яРНИЙН цЮММЮ чПЁ©БМЮ
-10145617=опЮр "яюб 92"
-10163830=рнб "яепб╡я опн"
-10165687=рнб "рпеид я╡йпер"
 10168533=тно ыЕПАЮЙ бЪВЕЯКЮБ кЕНМЁДНБХВ
 10201303=рнб "а╡ ет а╡ цпсо"
-10251802=тно ьХЬЙЁМ ╡ЦНП нКЕЙЯЮМДПНБХВ
-10256101=рнб "д╡яр я╡ярел"
-10305117=рнб "юяюбю цпсоо"
-10334053=рнб "цеигеп кнц╡ярхй"
-10361048=рнб "нб╡-дхярпхасьм"
-10367495=тно ьНПЁМ аНЦДЮМ бНКНДХЛХПНБХВ
-10418588=рнб "юпкюим я╡ярел"
 10423718=тно яЙЮВЙНБ нКЕЙЯЁИ чПЁИНБХВ
-10483459=рнб "юкэтю люпйер рпеид╡мц"
 10509180=рнб "нмкюим ╡мбеяр"
-10510184=оо "бхпнамхве на'╙дмюммъ екмю-яепб╡я"
-10510193=рнб "ебн лнрнпя"
 10519504=рнб "ейяекк╙мр йнлоюм╡"
-10530525=тно ьЛЮРСУЮ бЁРЮКЁИ цПХЦНПНБХВ
-10559841=рнб "уюиеп-е╡пйнм"
 10566485=тно юБЕГНБ юПРЕЛ б'ЪВЕЯКЮБНБХВ
-3597813=рнб ╚юйб╡кю ейяйкчг╡б д╡ярп╡аэчьм╩
 9291862=рнб "ьБЕИЙЁМ Ё йН"
-5706968= рнб "екечя"
-4764640=рнб ╚л╡мнкю сйпю╞мю╩
-10415228=рнб "чреу"
+
 4167459=рнб "опел╡нп╡"
 6168020=рнб "мбн "ейнянтр"
-753356=рнб "реплн╡лоскэя"
-#8869188=рнб"екейрпнм╡й рпеид"
-
-
+8180743=рнб "йх╞бьхмрнпц"
 
 #----- ДН 11 ДЕЙЮАПЪ
-#5615579=рнб "цемепюрнп ╡мфхм╡п╡мц"
-#210187=опюр "яюмреуйнлокейр"
-#10753268=оо "цеплея нор рпеидеп"
-#9952502=рнб "бо "люп╡н"
-#1187959	ннн "щЙЯХЛ-яРЮМДЮПР"
-#1387134	рнб "оюсеп окюмр"
-#3048782	рнб "╡д╡дф╡ цпсо"
-#3061783	рнб бйо "еяйн"
-#5438163	рнб ⌠дес оюсеп■
-#9666700	рнб "рд "юлр"
-#9977985	тно йнмъу╡м чп╡и
-#10255161	рнб "ярпелъмйю чю"
-#11011875	тно лЕКЭМХВСЙ нКЕЙЯЮМДП оЕРПНБХВ
-#231794	рнб  "ткеьйнл"
-#2216111	рнб "рюпкеб"
-#8591863	рнб "рц"рмо"
-#10136946	рнб "йнммейр рпеид"
-#10272132	тно аЕГСЦКХИ бЮЯХКЭ кЮПХНМНБХВ
-#10797839	рнб "йбегюкэ окчя"
-#10851535	тно мНПЁЙ дЕМХЯ яРЮМЁЯКЮБНБХВ
-#424905	рнб т╡плю "дм╡опнйнп"
-#10493122	тно лЕКЭМХЙ яЕПЦЁИ лХУЮИКНБХВ
-#9728647	ннн "яХЦЛЮ сЙПЮХМЮ"
-#9775209	рнб "юк-йн йнаеп"
-#8684214=рнб "реумнкндф╡йюк рпеид ╡мрепмеьмк"
+210187=опюр "яюмреуйнлокейр"
+3061783=рнб бйо "еяйн"
+9666700=рнб "рд "юлр"
+11011875=тно лЕКЭМХВСЙ нКЕЙЯЮМДП оЕРПНБХВ
+2216111=рнб "рюпкеб"
+9775209=рнб "юк-йн йнаеп"
+3022822=рнб "реумнонкхя 15"
